<resources>
    <string name="app_name">NerdHerd</string>

    <!-- Initial page-->
    <string name="login">Login</string>
    <string name="signup"> Sign-up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup_prompt">Don\'t have an account?\u0020 </string>
    <!-- Sign-up Page -->

    <!-- Sign-up categories-->
    <string name="su_full_name">Full Name</string>
    <string name="su_email">Email</string>
    <string name="su_confirm_email">Confirm Email</string>
    <string name="su_password">Password</string>
    <string name="su_confirm_password">Confirm Password</string>
    <string name="su_race">Race</string>
    <string name="su_weight">Weight</string>
    <string name="su_height">Height</string>
    <string name="su_age">Age</string>
    <string name="su_gender">Gender</string>
    <string name="su_smoke_hist">Do you have a history of smoking?</string>
    <string name="su_diabetes_hist">Do you or your immediate family have a history of diabetes?</string>
    <string name="su_hypertension_hist">Do you or your immediate family have a history of hypertension?</string>
    <string name="su_chronic_kidney_hist">Do you or your immediate family have a history of chronic kidney disease?</string>
    <string name="su_adrenal_disorder_hist">Do you or your immediate family have a history of adrenal disorders?</string>
    <string name="su_thyroid_disorder_hist">Do you or your immediate family have a history of thyroid disorders?</string>
    <string name="su_birth_control">Are you currently taking any form of birth control?</string>
    <string name="su_activity_level">Are you currently active for at least 1 hour per day?</string>
    <string name="su_sleep_apnea_hist">Do you currently or have you ever suffered from sleep apnea?</string>
    <string name="su_pregnant">Are you currently pregnant?</string>
    <string name="su_alcohol_consumption">Do you consume alcohol more than 7 times per week?</string>
    <string name="su_sleep_duration">Do you sleep for at least 6(–, &#8211;)8 hours per day?</string>
    <string name="su_terms_of_agreement">Do you agree to allowing Smart Heart to use your personal health data for the purposes of this app?</string>

    <!-- Main Page -->
    <string name="hello_name">Hello Name</string>
    <string name="display_weight">Weight: ______(pounds)______</string>
    <string name="display_height">Height: ______(inches)______</string>
    <string name="display_hypertension_risk">Risk of Hypertension?: ____(Yes/No)____</string>
    <string name="stress_bar">Stress Level: </string>

    <!-- Reset Password Page -->
    <string name="reset_password">Reset Password</string>
    <string name="su_new_password">Enter New Password</string>
    <string name="su_confirm_new_password">Confirm New Password</string>
    <string name="reset_password_btn">Done</string>

    <!-- Enter Code Page -->
    <string name="enter_code">Enter Code</string>
    <string name="enter_btn"> Enter</string>
    <string name="resend_prompt">Resend code</string>
    <!-- Send Verification Code Page -->
    <string name="verification_btn">Send Verification Code</string>
    <string name="login_prompt">Remember password?</string>

    <!-- Edit Profile Page -->
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <!-- Hints -->
    <string name="su_full_name_hint">Enter full name</string>
    <string name="su_email_hint">Enter email address</string>
    <string name="su_confirm_email_hint">Confirm email address</string>
    <string name="su_password_hint">Enter password</string>
    <string name="su_confirm_password_hint">Confirm password</string>
    <string name="su_weight_hint">Enter your weight (lbs.)</string>
    <string name="su_height_hint">Enter your height (inches)</string>
    <string name="su_age_hint">Enter your age</string>
    <string name="su_enter_code_hint">Enter the code</string>
    <string name="su_new_password_hint">Enter new password</string>
    <string name="su_confirm_new_password_hint">Confirm new password</string>

    <!-- Radio Buttons -->
    <string name="btn_male">Male</string>
    <string name="btn_female">Female</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>

    <!-- Drop down Menus -->
    <string-array name="races">
        <item>Hispanic or Latino</item>
        <item>White (Not Hispanic or Latino)</item>
        <item>African American</item>
        <item>American Indian and Alaska Native</item>
        <item>Asian</item>
        <item>Multiple races</item>
    </string-array>

    <string-array name="sad">
        <item>All of the time</item>
        <item>Most of the time</item>
        <item>Some of the time</item>
        <item>A little of the time</item>
        <item>Never</item>
    </string-array>

    <string-array name="nervous">
        <item>All of the time</item>
        <item>Most of the time</item>
        <item>Some of the time</item>
        <item>A little of the time</item>
        <item>Never</item>
    </string-array>

    <string-array name="restless">
        <item>All of the time</item>
        <item>Most of the time</item>
        <item>Some of the time</item>
        <item>A little of the time</item>
        <item>Never</item>
    </string-array>

    <string-array name="activity_level">
        <item>Never</item>
        <item>Once per Day</item>
        <item>Once per Week</item>
        <item>Once per Month</item>
        <item>Once per Year</item>
        <item>Unable to do this activity</item>
    </string-array>

    <string-array name="drinks">
        <item>Never</item>
        <item>5 drinks Per Week</item>
        <item>5 drinks per Month</item>
        <item>5 drinks per Year</item>
    </string-array>
</resources>
