<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3eaef"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/reset_password"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/githublogosample" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
            <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:textSize="28sp"-->
            <!--android:padding="8dp"-->
            <!--android:text="@string/su_email"/>-->
            <EditText
                android:id="@+id/verification_email"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:alpha=".75"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/su_email_hint"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColorHint="#000000"
                android:textStyle="italic" />

            <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:textSize="28sp"-->
            <!--android:padding="8dp"-->
            <!--android:text="@string/su_confirm_email"/>-->
            <EditText
                android:id="@+id/confirm_verification_email"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:alpha=".75"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/su_confirm_email_hint"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColorHint="#000000"
                android:textStyle="italic" />

            <Button
                android:id="@+id/verification_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_rounded"
                android:padding="10dp"
                android:text="@string/verification_btn"
                android:textColor="#ffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login_prompt" />

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="45dp"
                    android:layout_height="14dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@null"
                    android:text="@string/login"
                    android:textColor="#000000"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.widget.LinearLayout>
