<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3eaef"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/reset_password"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/githublogosample" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

           <!-- <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_new_password"
                android:textSize="28sp" /> -->

            <EditText
                android:id="@+id/new_password"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:alpha=".75"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/su_new_password_hint"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColorHint="#000000"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/confirm_new_password"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:alpha=".75"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/su_confirm_new_password_hint"
                android:padding="10dp"
                android:paddingTop="40dp"
                android:textAlignment="center"
                android:textColorHint="#000000"
                android:textStyle="italic" />

            <Button
                android:id="@+id/done_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_rounded"
                android:padding="10dp"
                android:text="@string/reset_password_btn"
                android:textColor="#ffff"
                android:textSize="16sp"
                android:textStyle="bold"  />
        </LinearLayout>
    </ScrollView>


</android.widget.LinearLayout>
